--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: row;
   }
-
   .mrk-slide-item {
     flex-shrink: 0;
     width: 100%;
@@ -21,15 +20,15 @@
     align-items: center;
     position: absolute;
     width: 100%;
-    height: 30;
+    height: 30px;
     left: 0;
     bottom: 0;
     .mrk-dot {
-      width: 6;
-      height: 6;
-      border-radius: 3;
+      width: 6px;
+      height: 6px;
+      border-radius: 3px;
       background-color: #d8d8d8;
-      margin-right: 5;
+      margin-right: 5px;
     }
   }
 }
