--- a/src/styles/lazy.css
+++ b/src/styles/lazy.css
@@ -2,6 +2,6 @@
   background-size: 20px 20px;
   background-repeat: no-repeat;
   background-position: center;
-  min-width: 100;
-  min-height: 100;
+  min-width: 100px;
+  min-height: 100px;
 }
