--- a/src/styles/pageRefresh.css
+++ b/src/styles/pageRefresh.css
@@ -18,8 +18,8 @@
   position: absolute;
   width: 100%;
   left: 0;
-  top: -40;
-  height: 40;
+  top: -40px;
+  height: 40px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -28,12 +28,12 @@
 
 .mrk-scroll-bar {
   position: absolute;
-  width: 2;
+  width: 2px;
   background: #aeaeae;
   height: 0;
-  border-radius: 1;
+  border-radius: 1px;
   top: 0;
-  right: 4;
+  right: 4px;
   opacity: 0;
   transition: opacity 300ms ease;
 }
