--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -2,7 +2,7 @@
   position: fixed;
   width: 100%;
   left: 0;
-  top: 150;
+  top: 150px;
   padding: 0;
   display: flex;
   justify-content: center;
