--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -8,11 +8,20 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
+  flex-direction: column;
   .mrk-toast-message {
     padding: 5px 10px 2px;
-    margin: 0 20px;
+    margin: 0 20px 15px;
     background-color: rgba(0,0,0,.8);
     color: #ffffff;
     font-size: 14px;
+    position: relative;
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+    transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+    &.show {
+      opacity: 1;
+      transform: translate3d(0,0,0);
+    }
   }
 }
