--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -9,6 +9,7 @@
   align-items: center;
   box-sizing: border-box;
   flex-direction: column;
+  z-index: 999999;
   .mrk-toast-message {
     padding: 5px 10px 2px;
     margin: 0 20px 15px;
